--- a/src/main/resources/templates/add_new_admin_email.html
+++ b/src/main/resources/templates/add_new_admin_email.html
@@ -25,7 +25,7 @@
     <tr>
       <td style="color: #7B7E84;">
         <div style="width: 60%; margin: 10px auto 0 auto">You can see these changes (and revert them if you wish) in the "Settings" tab of this employee's profile. If there is a problem,</div>
-        <div>please email us: <span style="color: #0075DF">hris-help@simplyhired.com</span></div>
+        <div>please email us: <span style="color: #0075DF">hris-help@<span th:text="${isIndeedENV ? 'indeed':'simplyHired'}"></span>.com</span></div>
       </td>
     </tr>
     <tr>
