--- a/src/main/resources/templates/password_reset_email.html
+++ b/src/main/resources/templates/password_reset_email.html
@@ -10,7 +10,7 @@
     <tr>
       <td style="width: 189px; height: 50px; display: block; margin: 10px auto 10px auto;">
         <img alt="logo" style="width: 202px; height: 37px;"
-             th:src="${frontEndAddress} + 'image/FullWidthSimplyHiredLogo.png'"
+             th:src="${frontEndAddress} + 'image/'+${isIndeedENV ? 'FullWidthWithIndeedLogo' : 'FullWidthSimplyHiredLogo'}+'.png'"
              title="logo">
       </td>
     </tr>
