--- a/src/main/resources/templates/password_change_email.html
+++ b/src/main/resources/templates/password_change_email.html
@@ -21,7 +21,7 @@
     </tr>
     <tr>
       <td style="font-size: 16px; line-height: 1.38; color: #7b7e84; text-align: center;">
-        <span>The password for your SimplyHired HRIS account has been changed.</span>
+        <span>The password for your <span th:text="${isIndeedENV ? 'Indeed':'SimplyHired'}"></span> HRIS account has been changed.</span>
       </td>
     </tr>
 
@@ -37,7 +37,7 @@
         <td style="width:315px; text-align: center;">
         <span style="font-size: 15px; color: grey;">
           If you did not request this change, please check with your account admin. If your account
-          admin did not make this change, please email us at: hris-help@simplyhired.com
+          admin did not make this change, please email us at: hris-help@<span th:text="${isIndeedENV ? 'indeed':'simplyHired'}"></span>.com
  to retrieve your account.
         </span>
         </td>
