--- a/src/main/resources/templates/verify_change_work_email.html
+++ b/src/main/resources/templates/verify_change_work_email.html
@@ -10,7 +10,7 @@
     <tr>
       <td style="width: 189px; height: 50px; display: block; margin: 10px auto 10px auto;">
         <img alt="logo" style="width: 202px; height: 37px;"
-             th:src="${frontEndAddress} + 'image/FullWidthSimplyHiredLogo.png'"
+             th:src="${frontEndAddress} + 'image/'+${isIndeedENV ? 'FullWidthWithIndeedLogo' : 'FullWidthSimplyHiredLogo'}+'.png'"
              title="logo">
       </td>
     </tr>
@@ -26,7 +26,7 @@
       <td style="font-size: 16px; line-height: 1.38; color: #7b7e84; text-align: center;">
         <span>You will use your new work email to sign into</span>
         <br>
-        <span>SimplyHired after it's been verified.</span>
+        <span><span th:text="${isIndeedENV ? 'Indeed HRIS':'SimplyHired'}"></span> after it's been verified.</span>
       </td>
     </tr>
     <tr>
