3461: Indeed HRIS- Time Off Email Style (#1256)
* 3461: time off email style

Signed-off-by: jiansheng <xujiansheng@easternbay.cn>

* 3461: update icon and style

Signed-off-by: jiansheng <xujiansheng@easternbay.cn>

* 3461: update icon and style

Signed-off-by: jiansheng <xujiansheng@easternbay.cn>

* 3461: format

Signed-off-by: jiansheng <xujiansheng@easternbay.cn>

Co-authored-by: Jay Hsu <61449098+jay-eb@users.noreply.github.com>

--- a/src/main/resources/templates/base_email.html
+++ b/src/main/resources/templates/base_email.html
@@ -16,7 +16,7 @@
     <tbody>
     <tr align="center" style="width: 565px">
       <td style="padding-bottom: 20px;">
-        <img style="width: 202px; height: 37px"
+        <img style="height: 37px"
              th:src="@{${frontEndAddress} + 'image/'+${isIndeedENV ? 'FullWidthWithIndeedLogo' : 'FullWidthSimplyHiredLogo'}+'.png'}">
       </td>
     </tr>
