--- a/src/main/resources/templates/employee_invitation_email.html
+++ b/src/main/resources/templates/employee_invitation_email.html
@@ -13,7 +13,7 @@
     <tr>
       <td style="padding-top: 30px; height: 44px; padding-bottom: 30px; text-align: center;">
         <img
-            style="width: 202px; height: 37px; margin-left: auto; margin-right: auto; display: block;"
+            style="height: 37px; margin-left: auto; margin-right: auto; display: block;"
             alt="logo" title="logo"
             th:src="@{${frontEndAddress} + 'image/'+${isIndeedENV ? 'FullWidthWithIndeedLogo' : 'FullWidthSimplyHiredLogo'}+'.png'}">
       </td>
