--- a/src/main/resources/templates/time_off_request_delete.html
+++ b/src/main/resources/templates/time_off_request_delete.html
@@ -9,7 +9,9 @@
 </head>
 <body>
 <table
-    style="width: 100%;border-radius: 4px; border-spacing: 0px; font-size: 14px;font-family: Roboto;background-color: #ffffff;">
+    th:style="'width: 100%;border-radius: 4px; border-spacing: 0px; font-size: 14px;background-color: #ffffff;'
+      +${isIndeedENV ? 'font-family: Noto Sans;' : 'font-family: Roboto;'}"
+    >
   <tbody>
   <tr>
     <td style="display: block">
