--- a/src/main/resources/templates/time_off_request_deny.html
+++ b/src/main/resources/templates/time_off_request_deny.html
@@ -10,12 +10,16 @@
 <body>
 
 <table style="border-spacing: 0px;width: 100%;">
-  <tbody style="width: 552px;border-radius: 4px;
-  font-size: 14px;font-family: Roboto;background-color: #ffffff;"
+  <tbody
+      th:style="'width: 552px;border-radius: 4px;font-size: 14px;background-color: #ffffff;'
+      +${isIndeedENV ? 'font-family: Noto Sans;' : 'font-family: Roboto;'}"
   >
   <tr>
 
-    <td align="center" style="width: 552px;padding: 15px;color: #2e3033; background: #FFF2F3;">
+    <td align="center"
+        th:style="'width: 552px;padding: 15px;'+
+        ${isIndeedENV ? 'color: #2d2d2d;background-color: #FEEEEF;' : 'background-color: #EFFFF6; color: #2e3033;'}"
+        >
       <img style="width: 19px;height: 20px;vertical-align: -5px;"
            th:src="@{${frontEndAddress}+'image/deny.png'}">
       <span>Denied by</span>
