--- a/src/main/resources/templates/verify_change_work_email.html
+++ b/src/main/resources/templates/verify_change_work_email.html
@@ -9,7 +9,7 @@
   <table style="width: 600px; margin-left: auto; margin-right: auto;">
     <tr>
       <td style="width: 189px; height: 50px; display: block; margin: 10px auto 10px auto;">
-        <img alt="logo" style="width: 202px; height: 37px;"
+        <img alt="logo" style="height: 37px;"
              th:src="${frontEndAddress} + 'image/'+${isIndeedENV ? 'FullWidthWithIndeedLogo' : 'FullWidthSimplyHiredLogo'}+'.png'"
              title="logo">
       </td>
