--- a/src/main/resources/templates/components/document_components.html
+++ b/src/main/resources/templates/components/document_components.html
@@ -10,7 +10,7 @@
   <td style="text-align: center" colspan="3">
     <div class="rectangle-card"
          style="width: 277px; height: auto; min-height: 100px; border-radius: 5px; border: solid 1px #dfe2e9; background-color: #ffffff; padding: 21px 0 0 13px; margin: auto;">
-      <img alt="document" style="width: 40px; height: 45px;" th:src="@{${frontEndAddress}+'image/document.png'}">
+      <img alt="document" style="width: 40px; height: 45px;" th:src="@{${frontEndAddress}+ ${isIndeedENV ? 'image/documentIndeed.svg' : 'image/document.png'}}">
       <div th:text="${documentTitle}" style="word-break: break-word"></div>
     </div>
   </td>
