--- a/src/main/resources/templates/document_request_acknowledge.html
+++ b/src/main/resources/templates/document_request_acknowledge.html
@@ -8,14 +8,14 @@
 </head>
 <body>
 <section align="center"
-         style="background-color: #f0f2f5; padding-bottom: 119px; width: 100%;">
+         th:style="'background-color: ' + ${isIndeedENV ? '#f3f2f1' : '#f0f2f5'} + '; padding-bottom: 119px; width: 100%;'">
   <table style="width: 100%; min-height: 465px; border-collapse: collapse;">
     <tbody>
     <tr>
       <td
-          style="width: 100%; height: 38px; text-align: center; border-radius: 4px; background-color: #FFF5EF; padding: 14px">
+          th:style="'width: 100%; height: 38px; text-align: center; border-radius: 4px; background-color: ' + ${isIndeedENV ? '#FBE9DF' : '#FFF5EF'} + '; padding: 14px'">
         <img style="width: 19px;height: 20px;margin-right: 8px; vertical-align: -5px;"
-             th:src="@{${frontEndAddress}+'image/pending.png'}"/>
+             th:src="@{${frontEndAddress}+${isIndeedENV ? 'image/WarningIndeed.svg' : 'image/pending.png'}}"/>
         Awaiting Your Acknowledgement
         <span th:if="${dueDate} != null" th:text="'- Due ' + ${dueDate}"
               style="color: #7b7e84;"></span>
@@ -33,10 +33,9 @@
               <div class="button-card"
                    style="padding-bottom: 30px; border-bottom: solid 1px #dfe2e9;">
                 <a
-                    style="margin-top: 30px; text-decoration: none; padding: 10px 20px; border-radius: 20px; background: #0075DF; border: 1px solid transparent;cursor: pointer; display: block; width: 151px; margin-left: auto; margin-right: auto;font-size: 14px; font-weight: 500; line-height: 1.17; letter-spacing: .2px; color: #ffffff; text-align: center;"
-                    th:href="@{${frontEndAddress} + 'documents/my-documents/' + ${documentRequestId}}">Review
-                  &
-                  Acknowledge
+                    th:style="${isIndeedENV ? 'padding:unset;width:205px;height:52px;font-size:16px;font-weight:bold;line-height:3.27;background:#2557A7;border:unset;border-radius:8px;color:#ffffff;' : 'padding: 10px 20px; border-radius: 20px; background: #0075DF; border: 1px solid transparent;width: 151px;font-size: 14px; font-weight: 500; line-height: 1.17; color: #ffffff;'} +'margin-top: 30px; text-decoration: none;cursor: pointer; display: block;margin-left: auto; margin-right: auto;letter-spacing: .2px; text-align: center;'"
+                    th:href="@{${frontEndAddress} + 'documents/my-documents/' + ${documentRequestId}}"
+                th:text="${isIndeedENV ? 'Review & acknowledge' : 'Review & Acknowledge'}">
                 </a>
               </div>
             </td>
