--- a/src/main/resources/templates/employee_invitation_email.html
+++ b/src/main/resources/templates/employee_invitation_email.html
@@ -44,7 +44,7 @@
                          th:style="${isIndeedENV ? 'width: auto;height:52px;background-color:#2557A7;border-radius:8px;font-size:16px;font-weight:bold;line-height:126.5%;padding: 16px 17px;' : 'background-color: #0075DF; width: 153px; height: 40px; font-size: 14px; border-radius: 400px; line-height: 42px;'} + 'color: #ffffff; outline: none; box-shadow: none; border: 0;display: inline-block; text-decoration: none'">
                     </div>
                     <a th:case="*" th:href="@{${targetLinkAddress}}"
-                       th:style="${isIndeedENV ? 'width: auto;height:52px;background-color:#2557A7;border-radius:8px;font-size:16px;font-weight:bold;line-height:126.5%;padding: 16px 17px;' : 'background-color: #0075DF; width: 153px; height: 40px; font-size: 14px; border-radius: 400px; line-height: 42px;'} + 'color: #ffffff; outline: none; box-shadow: none; border: 0;display: inline-block; text-decoration: none;cursor: pointer;'"
+                       th:style="${isIndeedENV ? 'width: 174px;height:52px;background-color:#2557A7;border-radius:8px;font-size:16px;font-weight:bold;line-height:319.5%;padding: unset;' : 'background-color: #0075DF; width: 153px; height: 40px; font-size: 14px; border-radius: 400px; line-height: 42px;'} + 'color: #ffffff; outline: none; box-shadow: none; border: 0;display: inline-block; text-decoration: none;cursor: pointer;'"
                        th:text="${isIndeedENV ? 'Confirm your email' : 'Get Started'}"></a></td>
                 </tr>
                 </tbody>
