3627: document icon in indeed email (#1285)
* 3627: document icon in indeed email

* 3627: font color

--- a/src/main/resources/templates/add_new_admin_email.html
+++ b/src/main/resources/templates/add_new_admin_email.html
@@ -11,7 +11,7 @@
 <section align="center">
   <table style="margin: auto; text-align: center">
     <tr>
-      <td th:style="'font-weight: ' + ${isIndeedENV ? 'bold' : 'normal'} + ';font-size: 24px; line-height: 32px; padding-top: 40px'">New Admin Added to HRIS</td>
+      <td th:style="'font-weight: ' + ${isIndeedENV ? 'bold' : 'normal'} + ';font-size: 24px; line-height: 32px; padding-top: 40px; color: #2d2d2d;'">New Admin Added to HRIS</td>
     </tr>
     <tr>
       <td style="font-size: 16px; line-height: 24px;">
