--- a/src/main/resources/templates/employee_invitation_email.html
+++ b/src/main/resources/templates/employee_invitation_email.html
@@ -28,7 +28,7 @@
                 <tbody>
                 <tr>
                   <td th:text="'Welcome to ' + ${isIndeedENV ? 'Indeed HR Tools' : companyName} + '!'"
-                      th:style="'font-weight: ' + ${isIndeedENV ? 'bold' : 'normal'} + ';padding-top: 47px; font-size: 24px; width: 355px; height: 28px; text-align: center;'">
+                      th:style="'font-weight: ' + ${isIndeedENV ? 'bold' : 'normal'} + ';padding-top: 47px; font-size: 24px; width: 355px; height: 28px; text-align: center;color:#2d2d2d;'">
                   </td>
                 </tr>
                 <tr>
