--- a/src/main/resources/templates/document_request_acknowledge.html
+++ b/src/main/resources/templates/document_request_acknowledge.html
@@ -15,7 +15,7 @@
       <td
           th:style="'width: 100%; height: 38px; text-align: center; border-radius: 4px; background-color: ' + ${isIndeedENV ? '#FBE9DF' : '#FFF5EF'} + '; padding: 14px'">
         <img style="width: 19px;height: 20px;margin-right: 8px; vertical-align: -5px;"
-             th:src="@{${frontEndAddress}+${isIndeedENV ? 'image/WarningIndeed.svg' : 'image/pending.png'}}"/>
+             th:src="@{${frontEndAddress}+${isIndeedENV ? 'image/WarningIndeed.png' : 'image/pending.png'}}"/>
         Awaiting Your Acknowledgement
         <span th:if="${dueDate} != null" th:text="'- Due ' + ${dueDate}"
               style="color: #7b7e84;"></span>
