--- a/src/main/resources/templates/document_request_acknowledge.html
+++ b/src/main/resources/templates/document_request_acknowledge.html
@@ -13,7 +13,7 @@
     <tbody>
     <tr>
       <td
-          th:style="'width: 100%; height: 38px; text-align: center; border-radius: 4px; background-color: ' + ${isIndeedENV ? '#FBE9DF' : '#FFF5EF'} + '; padding: 14px'">
+          th:style="'width: 100%; height: 38px; text-align: center; border-radius: 4px; background-color: ' + ${isIndeedENV ? '#FBE9DF;color:#2d2d2d' : '#FFF5EF'} + '; padding: 14px'">
         <img style="width: 19px;height: 20px;margin-right: 8px; vertical-align: -5px;"
              th:src="@{${frontEndAddress}+${isIndeedENV ? 'image/WarningIndeed.png' : 'image/pending.png'}}"/>
         Awaiting Your Acknowledgement
