--- a/src/main/resources/templates/document_request_signature.html
+++ b/src/main/resources/templates/document_request_signature.html
@@ -12,7 +12,7 @@
   <table style="width: 100%; min-height: 465px; border-collapse: collapse;">
     <tbody>
     <tr>
-      <td th:style="'width: 100%; height: 38px; text-align: center; border-radius: 4px; background-color: ' + ${isIndeedENV ? '#FBE9DF' : '#FFF5EF'} + '; padding: 14px'">
+      <td th:style="'width: 100%; height: 38px; text-align: center; border-radius: 4px; background-color: ' + ${isIndeedENV ? '#FBE9DF;color:#2d2d2d' : '#FFF5EF'} + '; padding: 14px'">
         <img style="width: 19px;height: 20px;margin-right: 8px; vertical-align: -5px;" th:src="@{${frontEndAddress}+${isIndeedENV ? 'image/WarningIndeed.png' : 'image/pending.png'}}"/>
         Awaiting Your Signature
         <span th:if="${dueDate} != null" th:text="'- Due ' + ${dueDate}" style="color: #7b7e84;"></span>
