--- a/src/main/resources/templates/components/document_components.html
+++ b/src/main/resources/templates/components/document_components.html
@@ -49,7 +49,7 @@
             <tr>
               <td style="padding: 10px 0">
                 <span th:text="${senderName}" style="color: #0075DF; width: fit-content; line-height: 1.5"></span>
-                <span th:style="${isIndeedENV && 'color:#2d2d2d;'}" th:switch="${requestType}">
+                <span th:style="'color:' + ${isIndeedENV ? ' #2d2d2d;' : '#2e3033'}" th:switch="${requestType}">
                   <span th:case="SIGN">Requested Your Signature</span>
                   <span th:case="ACKNOWLEDGE">Requested Your Acknowledgement</span>
                   <span th:case="VIEW">Sent You a Document</span>
